# ratiomaster-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
assets/: Info.plist  ratiomaster.desktop
crates/ratiomaster-cli/: Cargo.toml
crates/ratiomaster-cli/src/: main.rs
crates/ratiomaster-core/: Cargo.toml
crates/ratiomaster-core/benches/: bencode_bench.rs  generator_bench.rs  speed_bench.rs  torrent_bench.rs  url_encode_bench.rs
crates/ratiomaster-core/src/: error.rs  lib.rs
crates/ratiomaster-core/src/bencode/: decoder.rs  encoder.rs  error.rs  mod.rs  value.rs
crates/ratiomaster-core/src/client/: generator.rs  mod.rs  profiles.rs
crates/ratiomaster-core/src/config/: credential_store.rs  custom_profiles.rs  mod.rs  session.rs  version.rs
crates/ratiomaster-core/src/encoding/: mod.rs  url.rs
crates/ratiomaster-core/src/engine/: batch.rs  listener.rs  mod.rs  speed.rs  stop.rs  system_info.rs
crates/ratiomaster-core/src/network/: http.rs  local_ip.rs  mod.rs  tcp.rs
crates/ratiomaster-core/src/proxy/: http.rs  mod.rs  socks4.rs  socks4a.rs  socks5.rs
crates/ratiomaster-core/src/torrent/: error.rs  mod.rs  parser.rs  types.rs
crates/ratiomaster-core/src/tracker/: announce.rs  client.rs  mod.rs  response.rs  scrape.rs
crates/ratiomaster-core/tests/: mock_tracker.rs  proptest_suite.rs
crates/ratiomaster-gui/: Cargo.toml
crates/ratiomaster-gui/src/: app.rs  dialogs.rs  engine_bridge.rs  main.rs  tabs.rs  theme.rs
crates/ratiomaster-gui/src/panels/: client.rs  controls.rs  custom.rs  log.rs  mod.rs  options.rs  proxy.rs  random_next.rs  speed.rs  stats.rs  torrent.rs
crates/ratiomaster-gui/tests/: integration.rs
crates/ratiomaster-tui/: Cargo.toml
crates/ratiomaster-tui/src/: app.rs  browser.rs  dropdown.rs  input.rs  main.rs  theme.rs  ui.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bencode_decode.rs  torrent_parse.rs
scripts/: bundle-macos.sh  create-dmg.sh
tests/: tracker_integration.rs
tests/fixtures/: test.torrent
