[package]
name = "ratiomaster-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for RatioMaster"

[dependencies]
ratiomaster-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
