[package]
name = "ratiomaster-cli"
version = "1.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for RatioMaster"

[features]
default = []
keyring = ["ratiomaster-core/keyring"]

[dependencies]
ratiomaster-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
