[package]
name = "ratiomaster-gui"
version = "1.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native desktop GUI for RatioMaster-Rust using egui/eframe"

[[bin]]
name = "ratiomaster-gui"
path = "src/main.rs"

[dependencies]
ratiomaster-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

eframe = "0.31"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
