[package]
name = "ratiomaster-tui"
version = "1.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for RatioMaster"

[dependencies]
ratiomaster-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
